--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-DB_DSN="dbname=x user=y password=z host=ec2-aaa.compute-1.amazonaws.com"
+# run `heroku config` to get this value:
+DATABASE_URL="postgres://(user):(pw)@ec2-54-83-29-34.compute-1.amazonaws.com:5432/(db)"
 FLASK_ENV=development
